# MeetBooker

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  config.py  main.py  prestart.sh  pyproject.toml  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 086bbfc76c56_add_base_tables_to_db.py  12a0b6db8ada_add_default_id_value.py  1cdcbea7dc6e_add_base_tables_to_db.py  29fc491c5f54_upd.py  44dbf2b02e1a_add_fields.py  4ad55ec25700_add_cascade_delete.py  5377450aa42a_add_issued_tokens_table_and_change_.py  6db39c360a06_init.py  755469691153_add_unique_type_to_email.py  7c6998924234_add_default_value_to_id_fields.py  899d7bc352f7_change_type_of_profile_picture.py  c694c51890d9_init.py  ea3b7fd01473_add_cascade_delete.py
backend/src/adapters/: repository.py
backend/src/adapters/models/: __init__.py  appointments.py  issued_tokens.py  schedule_slots.py  specialist.py  user.py
backend/src/admin/: appointment.py  schedule_slot.py  specialists.py  user.py
backend/src/db/: db.py
backend/src/endpoints/: dependencies.py
backend/src/endpoints/auth/: __init__.py  login.py  register.py  routers.py  utils.py
backend/src/endpoints/schedule/: __init__.py  schedule.py
backend/src/endpoints/social_auth/: vk_auth.py  (+1 more)
backend/src/repositories/: __init__.py  appointment_repo.py  issued_tokens_repo.py  schedule_slots_repo.py  specialist_repo.py  user_repo.py
backend/src/schemas/: appointments.py  issued_tokens.py  schedule.py  specialists.py  token.py  user.py
backend/src/service/: abstract_service.py  user_service.py
(+43 files in other folders)
