[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Kirill Belokobylsky <userkirill609@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.111.0"}
uvicorn = "^0.29.0"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
envparse = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
