[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Kirill Belokobylsky <userkirill609@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.111.0"}
uvicorn = "^0.29.0"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
envparse = "^0.2.0"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
email-validator = "^2.1.1"
bcrypt = "^4.1.3"
python-multipart = "^0.0.9"
aiofiles = "^23.2.1"
sqladmin = {extras = ["full"], version = "^0.17.0"}
fastapi-admin = "^1.0.4"
fastapi-pagination = "^0.12.25"
fastapi-cors = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
